--- a/src/app/components/todo/input/input.component.html
+++ b/src/app/components/todo/input/input.component.html
@@ -1,6 +1,6 @@
 <div class="input-component">
     <div class="control">
-        <input type="text" placeholder="Enter an item">
-        <button>Add</button>
+        <input type="text" placeholder="Enter an item" #inputElement> 
+        <button (click)="onAddItem()">Add</button>
     </div>
 </div>
