--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -2,5 +2,5 @@
     <h1>My todo list</h1>
     <hr>
     <app-input></app-input>
-    <app-todo-item></app-todo-item>
+    <app-todo-item *ngFor="let item of currentListItems" [item]="item"></app-todo-item>
 </div>
